deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-gitops-app
  namespace: ouchi-cicd-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-gitops-app
  template:
    metadata:
      labels:
        app: my-gitops-app
    # spec:
    #   containers:
    #     - name: web
    #       image: nginx:alpine
    #       ports:
    #         - containerPort: 80
    spec:
      containers:
        - name: web
          # 修正①：root不要のNginxイメージに変更
          image: nginxinc/nginx-unprivileged:alpine  # URL省略時は docker.io/library/ が補完される
          ports:
            - containerPort: 8080  # nginx-unprivilegedは8080で待機
