route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-gitops-route
spec:
  to:
    kind: Service
    name: my-gitops-service
  port:
    targetPort: 8080     # ③ Serviceの受付ポート（8080）に合わせる！
